welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:29: error: Int does not take parameters
    x=getMondeHauteur-diag()-1
                          ^